# ml

./: .gitignore  GCE.md  README.md  deepdream.py  deepdream1.py  deepdream2.py  ollama.bat  ollama.sh  profile.sh  pyproject.toml  requirements-Darwin.txt  requirements-Linux.txt  requirements-Windows.txt  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  tb.sh  upgrade.bat  upgrade.sh
cache/: .gitignore
config/: .gitignore  jupyter_notebook_config.py
data/: .gitignore
notebooks/: .gitignore  chap2.ipynb  chap3.ipynb  chap4-category.ipynb  chap4-regression.ipynb  chap4.ipynb  chap7-cb.ipynb  chap7-tb.ipynb  chap8.ipynb  deepdream1.ipynb  deepdream2.ipynb  deepdream2.py  jupyter_ai.ipynb  kill_python.ipynb  stable_diffusion.ipynb  stable_diffusion_simpsons.ipynb
notebooks/book/: chap3.ipynb  chap4-binary.ipynb  chap4-category.ipynb  chap4-regression.ipynb  chap7-cb.ipynb  chap8.ipynb
notebooks/civitai/: .gitignore  common.py  setup.sh  test.py
notebooks/deepdream/: deepdream.py  deepdream1.ipynb  deepdream1.py  deepdream2.ipynb
notebooks/fan/: fan1.ipynb  fan2.ipynb  graveyard.ipynb  points_on_circle.ipynb  ring_picture.ipynb  test.ipynb
notebooks/gemma/: README.md  gemma-2b-keras.ipynb  gemma-2b-pytorch.ipynb  gemma-7b-pytorch.ipynb  gemma-pytorch.ipynb  issue_122427.ipynb
notebooks/interview/: interview1.ipynb
notebooks/learning/: animation.ipynb  drawing.ipynb  resources.ipynb  video.ipynb  widget.ipynb
notebooks/openinterpreter/: oi.ipynb
notebooks/other/: depth_anything.ipynb  qwen.ipynb
notebooks/qwen/: junk.ipynb  qwen2.5-3b.ipynb  qwen2.5_7b.ipynb  qwen2.ipynb
notebooks/stable_diffusion/: anime.ipynb  complex.ipynb  depth2img.ipynb  depth2img.py  depth2img_simple.ipynb  depth2img_variations.ipynb  (+21 more)
(+2 files in other folders)
